# minilog

./: .gitignore  CMakeLists.txt  build.sh
.ccls-cache/@@home@otaku_ocidental@workroot@minilog/: @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@errno.h.blob  @usr@include@fcntl.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@linux@errno.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@unistd.h.blob  @usr@include@x86_64-linux-gnu@bits@confname.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@environments.h.blob  @usr@include@x86_64-linux-gnu@bits@errno.h.blob  @usr@include@x86_64-linux-gnu@bits@fcntl-linux.h.blob  @usr@include@x86_64-linux-gnu@bits@fcntl.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@getopt_core.h.blob  @usr@include@x86_64-linux-gnu@bits@getopt_posix.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@posix_opt.h.blob  @usr@include@x86_64-linux-gnu@bits@stat.h.blob  @usr@include@x86_64-linux-gnu@bits@stdio_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@struct_stat.h.blob  @usr@include@x86_64-linux-gnu@bits@time64.h.blob  (+26 more)
src/: minilog.c  minilog.h
(+4 files in other folders)
